--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,6 +1,11 @@
 app_port = 9292
 disk_image = "reddit-base"
+instance_count = 2
 private_key_path = "~/.ssh/appuser"
 project = "your project id"
 public_key_path = "~/.ssh/appuser.pub"
+users_public_keys {
+    "appuser1" = "~/.ssh/appuser1.pub"
+    "appuser2" = "~/.ssh/appuser2.pub"
+}
 zone_name = "europe-west1-c"
