--- a/terraform/code/terraform.tfvars.example
+++ b/terraform/code/terraform.tfvars.example
@@ -4,6 +4,7 @@ instance_count = 2
 private_key_path = "~/.ssh/appuser"
 project = "your project id"
 public_key_path = "~/.ssh/appuser.pub"
+ssh_source_ranges = ["0.0.0.0/0"]
 users_public_keys {
     "appuser1" = "~/.ssh/appuser1.pub"
     "appuser2" = "~/.ssh/appuser2.pub"
