--- a/ansible/db.yml
+++ b/ansible/db.yml
@@ -1,6 +1,8 @@
 ---
 - name: Configure MongoDB
-  hosts: db
+  hosts:
+    - db
+    - reddit-db*
   become: true
   vars:
     mongo_bind_ip: 0.0.0.0
