--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,8 @@
 [defaults]
-inventory = ./inventory
+inventory = ./environment/stage/inventory
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
+
+[diff]
+always = yes
