--- a/ansible/roles/db/tasks/main.yml
+++ b/ansible/roles/db/tasks/main.yml
@@ -1,9 +1,13 @@
 ---
 # tasks file for db
 
-  - name: Change mongo config file
-    template:
-      src: mongod.conf.j2
-      dest: /etc/mongod.conf
-      mode: 0644
-    notify: restart mongod
+- name: Show info about the env
+  debug:
+    msg: "This host is in {{env}} environment"
+
+- name: Change mongo config file
+  template:
+    src: mongod.conf.j2
+    dest: /etc/mongod.conf
+    mode: 0644
+  notify: restart mongod
