ansible cfg improvment

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,6 +3,9 @@ inventory = ./environments/stage/inventory
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
+roles_path = ./roles:~/projects/andywow_infra/ansible/roles
+retry_files_enabled = False
 
 [diff]
-always = yes
+always = True
+context = 5
