ansible dynamic inventory environment support

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
-inventory = ./environments/stage/inventory
+inventory = ./environments/stage
+inventory_ignore_extensions = .static, .yml, .ini
+#inventory = ./environments/stage/inventory
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
