--- a/packer/reddit-app.json
+++ b/packer/reddit-app.json
@@ -36,7 +36,7 @@
     "provisioners": [
         {
             "type": "ansible",
-            "playbook_file": "ansible/packer_app.yml"
+            "playbook_file": "ansible/playbooks/packer_app.yml"
         }
     ]
 }
