--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@
 dist: trusty
 
 # running each build in isolated GCE VM
-# temp to false
-sudo: false
+sudo: required
 
 language: python
+python: "2.7"
 
 env:
   global:
     - DIR_BIN=/travis/bin
     - DIR_TMP=/travis/tmp
-    - PACKER_VERSION=1.1.13
+    - PACKER_VERSION=1.1.3
     - TERRAFORM_VERSION=0.11.2
 
 # https://docs.travis-ci.com/user/installing-dependencies/
