--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ env:
     - DIR_TMP=/travis/tmp
     - PACKER_VERSION=1.1.3
     - TERRAFORM_VERSION=0.11.2
+  matrix:
+    - USE_ENV=stage
+    - USE_ENV=prod
 
 # https://docs.travis-ci.com/user/installing-dependencies/
 before_install:
@@ -46,3 +49,10 @@ script:
   - cd packer
   - ${DIR_BIN}/packer validate -var-file=variables.json.example reddit-app.json
   - ${DIR_BIN}/packer validate -var-file=variables.json.example reddit-db.json
+  - cd ..
+
+  # terraform validate
+  - cd terraform/${USE_ENV}
+  - ${DIR_BIN}/terraform validate
+
+  
