--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ install:
 
   # getting terraform lint
   - wget https://github.com/wata727/tflint/releases/download/v${TERRAFORM_LINT_VERSION}/tflint_darwin_amd64.zip -P ${DIR_TMP}
-  - unzip tflint_darwin_amd64.zip -d ${DIR_BIN}
+  - unzip ${DIR_TMP}/tflint_darwin_amd64.zip -d ${DIR_BIN}
 
 script:
 
@@ -61,6 +61,6 @@ script:
   - rm terraform/${USE_ENV}/backend.tf
   - ${DIR_BIN}/terraform init
   - ${DIR_BIN}/terraform validate
-  
+
 
 
