--- a/.travis.yml
+++ b/.travis.yml
@@ -54,13 +54,15 @@ script:
   - cd packer
   - ${DIR_BIN}/packer validate -var-file=variables.json.example reddit-app.json
   - ${DIR_BIN}/packer validate -var-file=variables.json.example reddit-db.json
-  - cd ..
+  - cd ${WORK_DIR}
 
   # terraform validate
-  - cd terraform/${USE_ENV}
   - rm ${WORK_DIR}/terraform/${USE_ENV}/backend.tf
+  - cd terraform/${USE_ENV}
+  - touch .ssh/appuser.pub .ssh/appuser .ssh/appuser1.pub .ssh/appuser2.pub
   - ${DIR_BIN}/terraform init
   - ${DIR_BIN}/terraform validate --var-file=${WORK_DIR}/terraform/code/terraform.tfvars.example
+  - cd ${WORK_DIR}
 
 
 
