--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ install:
 
   # getting ansible
   - sudo pip install -r ansible/requirements.txt
+  - sudo pip install ansible-lint
 
   # getting terraform
   - wget https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip -P ${DIR_TMP}
@@ -56,8 +57,11 @@ script:
   - ${DIR_BIN}/packer validate -var-file=variables.json.example reddit-db.json
   - cd ${WORK_DIR}
 
+  # validating ansible playbooks
+  - find ansible/playbooks -type f -exec ansible-lint {} \;
+
   # terraform validate
-  - rm ${WORK_DIR}/terraform/${USE_ENV}/backend.tf
+  - rm terraform/${USE_ENV}/backend.tf
   - cd terraform/${USE_ENV}
   - touch ${HOME}/.ssh/appuser.pub ${HOME}/.ssh/appuser ${HOME}/.ssh/appuser1.pub ${HOME}/.ssh/appuser2.pub
   - ${DIR_BIN}/terraform init
