--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -8,6 +8,14 @@ Vagrant.configure('2') do |config|
     db.vm.box = 'ubuntu/xenial64'
     db.vm.hostname = 'dbserver'
     db.vm.network :private_network, ip: '10.10.10.10'
+
+    db.vm.provision 'ansible' do |ansible|
+      ansible.playbook = 'playbooks/site.yml'
+      ansible.groups = {
+        'db' => ['dbserver'],
+        'db:vars' => { 'mongo_bind_ip' => '0.0.0.0' }
+      }
+    end
   end
 
   config.vm.define 'appserver' do |app|
