--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -22,5 +22,13 @@ Vagrant.configure('2') do |config|
     app.vm.box = 'ubuntu/xenial64'
     app.vm.hostname = 'appserver'
     app.vm.network :private_network, ip: '10.10.10.20'
+
+    app.vm.provision 'ansible' do |ansible|
+      ansible.playbook = 'playbooks/site.yml'
+      ansible.groups = {
+        'app' => ['appserver'],
+        'app:vars' => { 'db_host' => '10.10.10.10' }
+      }
+    end
   end
 end
