--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -4,19 +4,21 @@
     - app
     - reddit-app*
   tags: deploy-tag
+  vars:
+    deploy_user: appuser
 
   tasks:
     - name: Fetch the latest version of application code
       git:
         repo: 'https://github.com/Otus-DevOps-2017-11/reddit.git'
-        dest: /home/appuser/reddit
+        dest: /home/{{deploy_user}}/reddit
         version: monolith
       notify: reload puma
 
     - name: Bundle install
       bundler:
         state: present
-        chdir: /home/appuser/reddit
+        chdir: /home/{{deploy_user}}/reddit
       notify: reload puma
 
   handlers:
