--- a/ansible/roles/app/tasks/puma.yml
+++ b/ansible/roles/app/tasks/puma.yml
@@ -11,9 +11,9 @@
 - name: Add config for DB connection
   template:
     src: db_config.j2
-    dest: /home/{{deploy_user}}/db_config
-    owner: {{deploy_user}}
-    group: {{deploy_user}}
+    dest: "/home/{{deploy_user}}/db_config"
+    owner: "{{deploy_user}}"
+    group: "{{deploy_user}}"
   notify:
     - restart puma
 
