--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -27,7 +27,17 @@ Vagrant.configure('2') do |config|
       ansible.playbook = 'playbooks/site.yml'
       ansible.groups = {
         'app' => ['appserver'],
-        'app:vars' => { 'db_host' => '10.10.10.10' }
+        'app:vars' => {
+          'db_host' => '10.10.10.10',
+          'nginx_sites' => {
+            'default' => [
+              'listen 80', 'server_name "reddit"',
+              'location / {
+                  proxy_pass http://127.0.0.1:9292;
+              }'
+            ]
+          }
+        }
       }
       ansible.extra_vars = {
         'deploy_user' => 'ubuntu'
