--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -28,19 +28,20 @@ Vagrant.configure('2') do |config|
       ansible.groups = {
         'app' => ['appserver'],
         'app:vars' => {
-          'db_host' => '10.10.10.10',
-          'nginx_sites' => {
-            'default' => [
-              'listen 80', 'server_name "reddit"',
-              'location / {
-                  proxy_pass http://127.0.0.1:9292;
-              }'
-            ]
-          }
+          'db_host' => '10.10.10.10'
         }
       }
       ansible.extra_vars = {
-        'deploy_user' => 'ubuntu'
+        'deploy_user' => 'ubuntu',
+        'nginx_sites' => {
+          'default' => [
+            'listen 80',
+            'server_name "reddit"',
+            'location / {
+                proxy_pass http://127.0.0.1:9292;
+            }'
+          ]
+        }
       }
     end
   end
