molecule VM create options

--- a/ansible/roles/db/molecule/default/molecule.yml
+++ b/ansible/roles/db/molecule/default/molecule.yml
@@ -10,6 +10,8 @@ lint:
 platforms:
   - name: instance
     box: ubuntu/xenial64
+    raw_config_args:
+      - "customize ['modifyvm', :id, '--uartmode1', 'disconnected']"
 provisioner:
   name: ansible
   lint:
