packer db & app configs update - ansible roles

--- a/ansible/playbooks/packer_app.yml
+++ b/ansible/playbooks/packer_app.yml
@@ -2,12 +2,5 @@
 - name: Install puma app
   hosts: all
   become: true
-  tasks:
-    - name: Install ruby
-      apt:
-        name:
-          - ruby-full
-          - ruby-bundler
-          - build-essential
-        state: present
-        update_cache: yes
+  roles:
+    - app
