--- a/packer/reddit-app.json
+++ b/packer/reddit-app.json
@@ -36,7 +36,10 @@
     "provisioners": [
         {
             "type": "ansible",
-            "playbook_file": "ansible/playbooks/packer_app.yml"
+            "playbook_file": "ansible/playbooks/packer_app.yml",
+            "ansible_env_vars": [
+                "ANSIBLE_ROLES_PATH={{pwd}}/ansible/roles"
+            ]
         }
     ]
 }
