README HW12 task* description & ansible.cfg [skip ci]

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,5 @@
 [defaults]
-inventory = ./environments/stage
-inventory_ignore_extensions = .static, .yml, .ini
+inventory = ./environments/stage/gce.py
 #inventory = ./environments/stage/inventory
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
